@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
 
     * Fixes
+        - Unaliased "dark" selectors no longer throw off prefetch
         - Fix proper composition of bind values across all possible
           SQL areas ( group_by => \[ ... ] now works properly )
 
